--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <span>F</span>
     </div>
     <div class="greetings">
+        <span></span>
         <span>N</span>
         <span>A</span>
-        <span>A</span>
         <span>E</span>
         <span>E</span>
-        <span>E</span>
+        <span></span>
     </div>
     <div class="description">
         <span>Semoga Kamu Suka yaa</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">Haga Clic</a>
+            <a href="FLORES.html">pencet ini seng</a>
         </button>
         
     </div>
