--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <div class="greetings">
 
-        <span>M</span>
+        <span>H</span>
         <span>A</span>
-        <span>A</span>
-        <span>F</span>
+        <span>i</span>
+        <span>i</span>
     </div>
     <div class="greetings">
         <span></span>
-        <span>N</span>
-        <span>A</span>
-        <span>E</span>
-        <span>E</span>
+        <span>C</span>
+        <span>Y</span>
+        <span>O</span>
+        <span>O</span>
         <span></span>
     </div>
     <div class="description">
-        <span>Semoga Kamu Suka yaa</span>
+        <span>Happyy Valentinee Cantikk</span>
     </div>
     <div class="button">
         <button>
