--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <span>H</span>
         <span>A</span>
-        <span>i</span>
-        <span>i</span>
+        <span>I</span>
+        <span>I</span>
     </div>
     <div class="greetings">
         <span></span>
